--- a/Challenges/Day_02/index.html
+++ b/Challenges/Day_02/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="center">
-      <div class="loading">Loading...</div>
+      <div class="loading">JAme หล่อมาก...</div>
       <div class="ring"></div>
     </div>
 </body>
